# PeriphMonitor

./: .gitignore  LICENSE  README.md  generate_icons.mjs  package-lock.json  package.json
.github/workflows/: release.yml
libs/windows_pnp/libs/windows_pnp_primitives/: Cargo.toml
libs/windows_pnp/libs/windows_pnp_primitives/src/: defer_block.rs
libs/windows_pnp/libs/windows_pnp_uuid/src/: uuid.rs
libs/windows_pnp/src/: pnp_device_property_key.rs  pnp_device_property_value.rs
libs/windows_pnp/src/errors/: enumerate_error.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: wireless_24g_devices.json
src-tauri/scripts/: BtNative.cs  bt_action.ps1
src-tauri/src/: app_icon.rs  audio.rs  audio_notify.rs  bluetooth.rs  classify.rs  commands.rs  config.rs  dedup.rs  device.rs  device_data.rs  main.rs  popup.rs  process.rs  state.rs  tray.rs  update.rs  windows.rs  wmi_query.rs
