[package]
name = "periph-monitor"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["rt"] }
regex = "1"
wmi = "0.14"
futures = "0.3"
windows-sys = { version = "0.52", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
] }

[dependencies.windows]
version = "0.58"
features = [
    "Devices_Bluetooth",
    "Devices_Enumeration",
    "Foundation_Collections",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
